Google colab buttons

--- a/notebooks/page_rank.ipynb
+++ b/notebooks/page_rank.ipynb
@@ -5,7 +5,16 @@
    "id": "04535504-98a7-4d31-8752-58b59a7a23f4",
    "metadata": {},
    "source": [
-    "# Page Rank"
+    "# Page Rank\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/eastspring-investments/herauni/blob/main/notebooks/page_rank.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "178a1585-274a-44b5-bec2-8475e860d425",
+   "metadata": {},
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -218,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "65049b8d-1fcd-464a-ab92-c6ea1b3a05ce",
    "metadata": {},
    "outputs": [],
@@ -235,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "4eae3a31-fe91-44f4-a8ef-cd08070230e1",
    "metadata": {},
    "outputs": [
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "c32d8980-d76c-439c-b3f9-a6bb4e863a1e",
    "metadata": {},
    "outputs": [
@@ -292,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "3d990683-2d09-44b3-9328-28bb291b8955",
    "metadata": {},
    "outputs": [
@@ -318,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "6f7c9c79-3a4b-4b0c-b5c0-8e2389278f24",
    "metadata": {},
    "outputs": [],
@@ -330,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "7a0c8d3f-e7a5-46da-bd11-614dc5272ce3",
    "metadata": {},
    "outputs": [
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "d4bc612d-2593-4254-9ae8-2833fcd1d709",
    "metadata": {},
    "outputs": [
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "b3ed75a0-8681-4263-a0da-cb4d00b4c7d7",
    "metadata": {},
    "outputs": [
@@ -402,7 +411,7 @@
        " 4: 0.27272737295861604}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "62cf7416-2d0a-44c5-9efd-5202aa87b5e0",
    "metadata": {},
    "outputs": [],
@@ -440,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "245f59fe-f9f7-4db1-8528-abe210c99fcc",
    "metadata": {},
    "outputs": [
@@ -468,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "c9bf9c0d-a075-4a4a-984b-80daabda456d",
    "metadata": {},
    "outputs": [
@@ -476,7 +485,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The stochastic matrix\n",
+      "Stochastic matrix\n",
       "[[0.         1.         0.         0.         0.        ]\n",
       " [0.5        0.         0.         0.         0.5       ]\n",
       " [0.         0.5        0.         0.         0.5       ]\n",
@@ -497,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "78769a4f-dbbe-41fe-9f8e-8e1148ad4d63",
    "metadata": {},
    "outputs": [
@@ -505,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The tranposed stochastic matrix\n",
+      "Transposed stochastic matrix\n",
       "[[0.         0.5        0.         0.         0.        ]\n",
       " [1.         0.         0.5        0.5        0.33333333]\n",
       " [0.         0.         0.         0.         0.33333333]\n",
@@ -523,17 +532,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "id": "8abdacf7-d309-44a9-b58e-7d2a7328e4a9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.181886, 0.363543, 0.090866, 0.090866, 0.272838])"
+       "array([0.181891, 0.363534, 0.090866, 0.090866, 0.272842])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
