--- a/notebooks/page_rank.ipynb
+++ b/notebooks/page_rank.ipynb
@@ -539,7 +539,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.181891, 0.363534, 0.090866, 0.090866, 0.272842])"
+       "array([0.18189 , 0.363544, 0.090843, 0.090843, 0.272879])"
       ]
      },
      "execution_count": 20,
@@ -574,16 +574,43 @@
    "metadata": {},
    "source": [
     "## Google Page Rank with Power Iteration\n",
-    "- Damping factor to ensure 100% convergence"
+    "- Damping factor to ensure convergence"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78d01f12-3df3-4849-8178-b0432568a499",
+   "id": "cc0045ba-2799-4006-a3ec-8f4a85157fc1",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "64f8ea00-58ec-4027-9d2e-14312f51f644",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 0.17685715941894686,\n",
+       " 1: 0.345545563925808,\n",
+       " 2: 0.1055226523042404,\n",
+       " 3: 0.1055226523042404,\n",
+       " 4: 0.2665519720467644}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compute pagerank centrality with networkx directly\n",
+    "centrality = nx.pagerank(g, alpha=0.85)\n",
+    "centrality"
+   ]
   }
  ],
  "metadata": {
