Update Colab install

--- a/notebooks/linear_programming.ipynb
+++ b/notebooks/linear_programming.ipynb
@@ -9,6 +9,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8eea7850-b0ba-4ffb-bd2c-046c4d8d18e1",
+   "metadata": {},
+   "source": [
+    "## Google Colab Settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6f45540c-7c52-4361-b534-a49bc91c9889",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  import google.colab\n",
+    "  COLAB = True\n",
+    "except:\n",
+    "  COLAB = False\n",
+    "\n",
+    "\n",
+    "if COLAB:\n",
+    "    ! wget https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.2-Linux-x86_64.sh\n",
+    "    ! chmod +x Miniconda3-py37_4.8.2-Linux-x86_64.sh\n",
+    "    ! bash ./Miniconda3-py37_4.8.2-Linux-x86_64.sh -b -f -p /usr/local\n",
+    "    import sys\n",
+    "    sys.path.append('/usr/local/lib/python3.7/site-packages/')\n",
+    "\n",
+    "    ! conda install -c conda-forge pyomo -y\n",
+    "    ! conda install -c conda-forge pyomo.extras -y\n",
+    "    ! conda install -c conda-forge coincbc -y\n",
+    "    ! conda install -c conda-forge ipopt -y\n",
+    "    ! conda install -c conda-forge glpk -y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dcb369c-d37c-4d59-858e-0042983ad916",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "f6fbbf6b-ae89-4d10-9e18-3d8a9f14194b",
