Update colab settings

--- a/notebooks/linear_programming.ipynb
+++ b/notebooks/linear_programming.ipynb
@@ -5,7 +5,8 @@
    "id": "44fec49c-614b-43b4-b268-4487d42d3781",
    "metadata": {},
    "source": [
-    "# Linear Programming (Linear Optimisation)"
+    "# Linear Programming (Linear Optimisation)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/eastspring-investments/herauni/blob/main/notebooks/linear_programming.ipynb)"
    ]
   },
   {
