--- a/notebooks/page_rank.ipynb
+++ b/notebooks/page_rank.ipynb
@@ -11,6 +11,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63611581-c4ab-425c-ae32-6e81d7c66857",
+   "metadata": {},
+   "source": [
+    "## Google Colab Settings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2c0d5e-a921-4ea9-94b3-7a95347b483b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "  import google.colab\n",
+    "  COLAB = True\n",
+    "except:\n",
+    "  COLAB = False\n",
+    "\n",
+    "\n",
+    "if COLAB:\n",
+    "    ! wget https://repo.anaconda.com/miniconda/Miniconda3-py37_4.8.2-Linux-x86_64.sh\n",
+    "    ! chmod +x Miniconda3-py37_4.8.2-Linux-x86_64.sh\n",
+    "    ! bash ./Miniconda3-py37_4.8.2-Linux-x86_64.sh -b -f -p /usr/local\n",
+    "    import sys\n",
+    "    sys.path.append('/usr/local/lib/python3.7/site-packages/')\n",
+    "\n",
+    "    ! conda install -c conda-forge networkx -y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "178a1585-274a-44b5-bec2-8475e860d425",
    "metadata": {},
    "source": [
