--- a/notebooks/linear_programming.ipynb
+++ b/notebooks/linear_programming.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "f6fbbf6b-ae89-4d10-9e18-3d8a9f14194b",
    "metadata": {},
    "outputs": [],
@@ -314,10 +314,319 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0be1a76b-cb36-4c60-b572-f8e9c694a5a9",
+   "metadata": {},
+   "source": [
+    "## Basic LP Problem: Example 2\n",
+    "- Let's build a roboadvisor to optimise for portfolio allocation!\n",
+    "\n",
+    "| Fund Name  | Risk Level | Category               | Average Annual Return (ARR) |\n",
+    "|------------|------------|------------------------|-----------------------------|\n",
+    "| Fund One   | 1          | Money market fund      | 4.5                         |\n",
+    "| Fund Two   | 2          | Money market fund      | 5.62                        |\n",
+    "| Fund Three | 2          | Bond fund              | 6.8                         |\n",
+    "| Fund Four  | 3          | High yield bond fund   | 10.15                       |\n",
+    "| Fund Five  | 5          | Aggressive growth fund | 20.6                        |\n",
+    "\n",
+    "- Risk scale of 1 (very conservative) to 5 (very risky). \n",
+    "- Maximise the average annual return on investment, subject to the following restrictions:\n",
+    "    - The average risk level of the entire investment should not exceed 2.5\n",
+    "    - At least 30% of the investment should be placed in money market funds\n",
+    "    - At most £2,000 should be invested in the aggressive growth fund."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288ebae5-2540-4a0b-bed9-950c2ef5d32c",
+   "metadata": {},
+   "source": [
+    "### Step 1: Define Decision Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "ecab9b23-7a19-4da5-81db-b3fb48d201ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate model and assign to model object\n",
+    "model = ConcreteModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "cb4459c6-3862-4419-9212-791794939a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define variables\n",
+    "model.allocation_fund_1 = Var(domain=NonNegativeReals)\n",
+    "model.allocation_fund_2 = Var(domain=NonNegativeReals)\n",
+    "model.allocation_fund_3 = Var(domain=NonNegativeReals)\n",
+    "model.allocation_fund_4 = Var(domain=NonNegativeReals)\n",
+    "model.allocation_fund_5 = Var(domain=NonNegativeReals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfd1decc-1fb3-47f7-83c4-5ec1a70b8279",
+   "metadata": {},
+   "source": [
+    "### Step 2: Define Objective Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "5587180c-048b-458f-a7a4-89c131ed9a26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Objective function \n",
+    "model.cost = Objective(expr=(4.5 * model.allocation_fund_1 + \\\n",
+    "                       5.62 * model.allocation_fund_2 + \\\n",
+    "                       6.8 * model.allocation_fund_3 + \\\n",
+    "                       10.15 * model.allocation_fund_4 + \\\n",
+    "                       20.6 * model.allocation_fund_5)/100, sense=maximize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bee2a6b-8664-41f0-965c-625264cc1361",
+   "metadata": {},
+   "source": [
+    "### Step 3: Define Constraints"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "cd66ae4e-8e47-4bf5-adca-3d9af1ff4d37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total cash allocation\n",
+    "model.total_cash = Constraint(expr=model.allocation_fund_1 + \\\n",
+    "                              model.allocation_fund_2 + \\\n",
+    "                              model.allocation_fund_3 + \\\n",
+    "                              model.allocation_fund_4 + \\\n",
+    "                              model.allocation_fund_5 <= 10000\n",
+    "                             )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "75be9252-b4cb-4a56-babf-dd417488bf1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mean Risk\n",
+    "model.mean_risk = Constraint(expr=(model.allocation_fund_1 + \\\n",
+    "                              2*model.allocation_fund_2 + \\\n",
+    "                              2*model.allocation_fund_3 + \\\n",
+    "                              3*model.allocation_fund_4 + \\\n",
+    "                              5*model.allocation_fund_5) / 10000 <= 2.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b4863a8a-4b42-417b-8c39-546e997247f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Money Market Exposure\n",
+    "model.mm_exposure = Constraint(expr=model.allocation_fund_1 + \\\n",
+    "                              model.allocation_fund_2 >= 3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "4623fd3c-8c49-402f-8403-5a6f9471c421",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aggressive Growth Exposure\n",
+    "model.ag_exposure = Constraint(expr=model.allocation_fund_5 <= 2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66e23f5-d687-4663-90e7-e37d048154c1",
+   "metadata": {},
+   "source": [
+    "### Step 4: Solve "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "f508107e-1ef8-40a4-82f2-6c610478e085",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# ==========================================================\n",
+      "# = Solver Results                                         =\n",
+      "# ==========================================================\n",
+      "# ----------------------------------------------------------\n",
+      "#   Problem Information\n",
+      "# ----------------------------------------------------------\n",
+      "Problem: \n",
+      "- Name: unknown\n",
+      "  Lower bound: 969.75\n",
+      "  Upper bound: 969.75\n",
+      "  Number of objectives: 1\n",
+      "  Number of constraints: 5\n",
+      "  Number of variables: 6\n",
+      "  Number of nonzeros: 14\n",
+      "  Sense: maximize\n",
+      "# ----------------------------------------------------------\n",
+      "#   Solver Information\n",
+      "# ----------------------------------------------------------\n",
+      "Solver: \n",
+      "- Status: ok\n",
+      "  Termination condition: optimal\n",
+      "  Statistics: \n",
+      "    Branch and bound: \n",
+      "      Number of bounded subproblems: 0\n",
+      "      Number of created subproblems: 0\n",
+      "  Error rc: 0\n",
+      "  Time: 0.00888681411743164\n",
+      "# ----------------------------------------------------------\n",
+      "#   Solution Information\n",
+      "# ----------------------------------------------------------\n",
+      "Solution: \n",
+      "- number of solutions: 0\n",
+      "  number of solutions displayed: 0\n",
+      "5 Var Declarations\n",
+      "    allocation_fund_1 : Size=1, Index=None\n",
+      "        Key  : Lower : Value  : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 4500.0 :  None : False : False : NonNegativeReals\n",
+      "    allocation_fund_2 : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    allocation_fund_3 : Size=1, Index=None\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   0.0 :  None : False : False : NonNegativeReals\n",
+      "    allocation_fund_4 : Size=1, Index=None\n",
+      "        Key  : Lower : Value  : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 3500.0 :  None : False : False : NonNegativeReals\n",
+      "    allocation_fund_5 : Size=1, Index=None\n",
+      "        Key  : Lower : Value  : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 : 2000.0 :  None : False : False : NonNegativeReals\n",
+      "\n",
+      "1 Objective Declarations\n",
+      "    cost : Size=1, Index=None, Active=True\n",
+      "        Key  : Active : Sense    : Expression\n",
+      "        None :   True : maximize : (4.5*allocation_fund_1 + 5.62*allocation_fund_2 + 6.8*allocation_fund_3 + 10.15*allocation_fund_4 + 20.6*allocation_fund_5)/100\n",
+      "\n",
+      "4 Constraint Declarations\n",
+      "    ag_exposure : Size=1, Index=None, Active=True\n",
+      "        Key  : Lower : Body              : Upper  : Active\n",
+      "        None :  -Inf : allocation_fund_5 : 2000.0 :   True\n",
+      "    mean_risk : Size=1, Index=None, Active=True\n",
+      "        Key  : Lower : Body                                                                                                              : Upper : Active\n",
+      "        None :  -Inf : (allocation_fund_1 + 2*allocation_fund_2 + 2*allocation_fund_3 + 3*allocation_fund_4 + 5*allocation_fund_5)/10000 :   2.5 :   True\n",
+      "    mm_exposure : Size=1, Index=None, Active=True\n",
+      "        Key  : Lower  : Body                                  : Upper : Active\n",
+      "        None : 3000.0 : allocation_fund_1 + allocation_fund_2 :  +Inf :   True\n",
+      "    total_cash : Size=1, Index=None, Active=True\n",
+      "        Key  : Lower : Body                                                                                              : Upper   : Active\n",
+      "        None :  -Inf : allocation_fund_1 + allocation_fund_2 + allocation_fund_3 + allocation_fund_4 + allocation_fund_5 : 10000.0 :   True\n",
+      "\n",
+      "10 Declarations: allocation_fund_1 allocation_fund_2 allocation_fund_3 allocation_fund_4 allocation_fund_5 cost total_cash mean_risk mm_exposure ag_exposure\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solve linear model\n",
+    "# Currenly using GPLK\n",
+    "# Other powerful commercial optimisers can be used like Gurobi or CPLEX\n",
+    "results = SolverFactory('glpk').solve(model)\n",
+    "\n",
+    "results.write()\n",
+    "if results.solver.status == 'ok':\n",
+    "    model.pprint()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "6325aefb-6254-4960-95c0-49fb1f962cb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Return =  969.75\n",
+      "\n",
+      "Decision Variables\n",
+      "Allocation to fund 1 4500.0\n",
+      "Allocation to fund 2 0.0\n",
+      "Allocation to fund 3 0.0\n",
+      "Allocation to fund 4 3500.0\n",
+      "Allocation to fund 5 2000.0\n",
+      "--------------------------------------------------\n",
+      "\n",
+      "Constraints\n",
+      "Total cash 10000.0\n",
+      "Mean risk 2.5\n",
+      "Money market exposure 4500.0\n",
+      "Aggressive growth exposure 2000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display solution\n",
+    "print('\\nReturn = ', model.cost())\n",
+    "\n",
+    "print('\\nDecision Variables')\n",
+    "print('Allocation to fund 1', model.allocation_fund_1())\n",
+    "print('Allocation to fund 2', model.allocation_fund_2())\n",
+    "print('Allocation to fund 3', model.allocation_fund_3())\n",
+    "print('Allocation to fund 4', model.allocation_fund_4())\n",
+    "print('Allocation to fund 5', model.allocation_fund_5())\n",
+    "\n",
+    "print('-'*50)\n",
+    "\n",
+    "print('\\nConstraints')\n",
+    "print('Total cash', model.total_cash())\n",
+    "print('Mean risk', model.mean_risk())\n",
+    "print('Money market exposure', model.mm_exposure())\n",
+    "print('Aggressive growth exposure', model.ag_exposure())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ed4723-c408-4ac4-86cd-53da7e6fbdb5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae10cfb1-9e3b-4f2e-9dc5-2a62c2581993",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "3a404266-c6e7-47a5-b2d8-a1aa143dec3c",
    "metadata": {},
    "source": [
-    "## Basic LP Problem: Example 2"
+    "## Basic LP Problem: Example 3 (Practice)"
    ]
   },
   {
@@ -326,6 +635,7 @@
    "metadata": {},
    "source": [
     "### Problem Statement\n",
+    "- The following is purely hypothetical. \n",
     "- **We have quant developers in 10 countries and we want to have 24 hours trading coverage**\n",
     "    - Original QD count\n",
     "        - Singapore: 4\n",
@@ -365,18 +675,7 @@
    "id": "bdc6e5a9-536e-425d-985d-f833cfae2c76",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Problem frame\n",
-    "# Different number of quant developers in each LBU\n",
-    "\n",
-    "# Decision variables\n",
-    "# How many quant devs per country\n",
-    "\n",
-    "# Constraints\n",
-    "# Cover 24 hours trading day covering SG/HK, JP, UK, US\n",
-    "\n",
-    "# At least 2 quant dev covering each major zone"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
