--- a/notebooks/linear_programming.ipynb
+++ b/notebooks/linear_programming.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 74,
    "id": "6f45540c-7c52-4361-b534-a49bc91c9889",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "id": "f6fbbf6b-ae89-4d10-9e18-3d8a9f14194b",
    "metadata": {},
    "outputs": [],
@@ -74,10 +74,11 @@
     "### Problem statement\n",
     "- **We are holding a corporate pizza & prosecco party in a division and we need to optimise how many pizza and prosecco to buy**\n",
     "    - We have 20 people\n",
-    "    - Each pizza costs \\$30\n",
-    "    - Each prosecco costs \\$50\n",
-    "    - Every staff drinks at least half a bottle of prosecco\n",
-    "    - Every staff eats at least 2 slices of pizza"
+    "    - Each **pizza** costs \\$30\n",
+    "    - Each **prosecco** costs \\$50\n",
+    "    - CONSTRAINTS\n",
+    "        - Every staff drinks at least half a bottle of prosecco\n",
+    "        - Every staff eats at least 2 slices of pizza"
    ]
   },
   {
@@ -85,12 +86,13 @@
    "id": "29621022-8b97-4872-ae9e-71bff7a86371",
    "metadata": {},
    "source": [
-    "### Step 1: Define Decision Variables"
+    "### Step 1: Define Decision Variables\n",
+    "- DEFINE HOW MANY PIZZA & PROSECCO TO BUY"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "id": "33074e7d-e114-4777-9877-4b7a1b18be86",
    "metadata": {},
    "outputs": [],
@@ -101,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "id": "a52a5ff4-2ff7-474b-ae7b-c8ce08ee940c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define variables\n",
-    "model.n_pizza = Var(domain=NonNegativeReals)\n",
-    "model.n_prosecco = Var(domain=NonNegativeReals)"
+    "model.n_pizza = Var(domain=NonNegativeIntegers)\n",
+    "model.n_prosecco = Var(domain=NonNegativeIntegers)"
    ]
   },
   {
@@ -116,12 +118,13 @@
    "id": "f07c409c-223b-4989-866f-d810926b1afb",
    "metadata": {},
    "source": [
-    "### Step 2: Define Objective Function"
+    "### Step 2: Define Objective Function\n",
+    "- 30 * number pizza + 50 * number of prosecco"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "id": "ba2fbdcb-e266-47c9-88ba-7414a0b91b6c",
    "metadata": {},
    "outputs": [],
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "id": "9457f946-b260-415e-9910-6d752c91b9d3",
    "metadata": {},
    "outputs": [],
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "id": "5892e3a8-ff3b-4c00-b9f5-83b4d3fa7328",
    "metadata": {},
    "outputs": [],
@@ -166,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "id": "b20f2633-e66e-46ba-b59f-8c91d772104c",
    "metadata": {
     "tags": []
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "id": "4a26b105-93c1-4ec5-a5df-7be38bd4d480",
    "metadata": {},
    "outputs": [
@@ -207,8 +210,8 @@
       "# ----------------------------------------------------------\n",
       "Problem: \n",
       "- Name: unknown\n",
-      "  Lower bound: 700.0\n",
-      "  Upper bound: 700.0\n",
+      "  Lower bound: 710.0\n",
+      "  Upper bound: 710.0\n",
       "  Number of objectives: 1\n",
       "  Number of constraints: 3\n",
       "  Number of variables: 3\n",
@@ -225,7 +228,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.022398948669433594\n",
+      "  Time: 0.006757259368896484\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -234,11 +237,11 @@
       "  number of solutions displayed: 0\n",
       "2 Var Declarations\n",
       "    n_pizza : Size=1, Index=None\n",
-      "        Key  : Lower : Value            : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 : 6.66666666666667 :  None : False : False : NonNegativeReals\n",
+      "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
+      "        None :     0 :   7.0 :  None : False : False : NonNegativeIntegers\n",
       "    n_prosecco : Size=1, Index=None\n",
       "        Key  : Lower : Value : Upper : Fixed : Stale : Domain\n",
-      "        None :     0 :  10.0 :  None : False : False : NonNegativeReals\n",
+      "        None :     0 :  10.0 :  None : False : False : NonNegativeIntegers\n",
       "\n",
       "1 Objective Declarations\n",
       "    cost : Size=1, Index=None, Active=True\n",
@@ -278,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "id": "d217947e-ae5b-496a-974d-864007bef06a",
    "metadata": {},
    "outputs": [
@@ -287,15 +290,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Cost =  700.0000000000001\n",
+      "Cost =  710.0\n",
       "\n",
       "Decision Variables\n",
-      "Number of Pizza =  6.66666666666667\n",
+      "Number of Pizza =  7.0\n",
       "Number of Prosecco =  10.0\n",
       "\n",
-      "Constraints\n",
-      "Pizza Demand  =  6.66666666666667\n",
-      "Prosecco Demand =  10.0\n"
+      "Constraints\n"
      ]
     }
    ],
@@ -308,8 +309,8 @@
     "print('Number of Prosecco = ', model.n_prosecco())\n",
     "\n",
     "print('\\nConstraints')\n",
-    "print('Pizza Demand  = ', model.pizza_demand())\n",
-    "print('Prosecco Demand = ', model.prosecco_demand())"
+    "#print('Pizza Demand  = ', model.pizza_demand())\n",
+    "#print('Prosecco Demand = ', model.prosecco_demand())"
    ]
   },
   {
@@ -329,10 +330,11 @@
     "| Fund Five  | 5          | Aggressive growth fund | 20.6                        |\n",
     "\n",
     "- Risk scale of 1 (very conservative) to 5 (very risky). \n",
+    "- We have 10,000 USD\n",
     "- Maximise the average annual return on investment, subject to the following restrictions:\n",
     "    - The average risk level of the entire investment should not exceed 2.5\n",
     "    - At least 30% of the investment should be placed in money market funds\n",
-    "    - At most £2,000 should be invested in the aggressive growth fund."
+    "    - At most 2,000 USD should be invested in the aggressive growth fund."
    ]
   },
   {
@@ -345,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 100,
    "id": "ecab9b23-7a19-4da5-81db-b3fb48d201ae",
    "metadata": {},
    "outputs": [],
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 101,
    "id": "cb4459c6-3862-4419-9212-791794939a40",
    "metadata": {},
    "outputs": [],
@@ -374,12 +376,13 @@
    "id": "cfd1decc-1fb3-47f7-83c4-5ec1a70b8279",
    "metadata": {},
    "source": [
-    "### Step 2: Define Objective Function"
+    "### Step 2: Define Objective Function\n",
+    "- TRYING TO MAXIMIZE THE RETURN OF OUR 10,000 USD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 102,
    "id": "5587180c-048b-458f-a7a4-89c131ed9a26",
    "metadata": {},
    "outputs": [],
@@ -402,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 103,
    "id": "cd66ae4e-8e47-4bf5-adca-3d9af1ff4d37",
    "metadata": {},
    "outputs": [],
@@ -418,12 +421,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 104,
    "id": "75be9252-b4cb-4a56-babf-dd417488bf1c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mean Risk\n",
+    "# The average risk level of the entire investment should not exceed 2.5\n",
     "model.mean_risk = Constraint(expr=(model.allocation_fund_1 + \\\n",
     "                              2*model.allocation_fund_2 + \\\n",
     "                              2*model.allocation_fund_3 + \\\n",
@@ -433,24 +437,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 105,
    "id": "b4863a8a-4b42-417b-8c39-546e997247f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Money Market Exposure\n",
+    "# At least 30% of the investment should be placed in money market funds\n",
     "model.mm_exposure = Constraint(expr=model.allocation_fund_1 + \\\n",
     "                              model.allocation_fund_2 >= 3000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 106,
    "id": "4623fd3c-8c49-402f-8403-5a6f9471c421",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Aggressive Growth Exposure\n",
+    "# At most 2,000 USD should be invested in the aggressive growth fund.\n",
     "model.ag_exposure = Constraint(expr=model.allocation_fund_5 <= 2000)"
    ]
   },
@@ -464,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 107,
    "id": "f508107e-1ef8-40a4-82f2-6c610478e085",
    "metadata": {},
    "outputs": [
@@ -498,7 +504,7 @@
       "      Number of bounded subproblems: 0\n",
       "      Number of created subproblems: 0\n",
       "  Error rc: 0\n",
-      "  Time: 0.00888681411743164\n",
+      "  Time: 0.007001399993896484\n",
       "# ----------------------------------------------------------\n",
       "#   Solution Information\n",
       "# ----------------------------------------------------------\n",
@@ -558,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 108,
    "id": "6325aefb-6254-4960-95c0-49fb1f962cb6",
    "metadata": {},
    "outputs": [
