Binary, linear search

--- a/notebooks/linear_program.ipynb
+++ b/notebooks/linear_program.ipynb
@@ -5,7 +5,7 @@
    "id": "44fec49c-614b-43b4-b268-4487d42d3781",
    "metadata": {},
    "source": [
-    "# Linear Programming (Linear Optimisation)\n",
+    "# Linear Program\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/eastspring-investments/herauni/blob/main/notebooks/linear_programming.ipynb)"
    ]
   },
@@ -610,22 +610,6 @@
     "print('Money market exposure', model.mm_exposure())\n",
     "print('Aggressive growth exposure', model.ag_exposure())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6ed4723-c408-4ac4-86cd-53da7e6fbdb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae10cfb1-9e3b-4f2e-9dc5-2a62c2581993",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
